tests/assets/test_suites/w3c_wsdl20/documents/bad/Import-8B/EchoImpl.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Import-8B/EchoImpl.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/EchoImpl"
	xmlns:tns="http://example.org/EchoImpl"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:wsoap="http://www.w3.org/ns/wsdl/soap">

	<wsdl:documentation>
		This test shows an invalid use of a WSDL import.
		The namespace specified by a wsdl:import element
		must be the same as the target namespace specified
		for the imported WSDL document.
		
		This document violates assertion Import-1085.
	</wsdl:documentation>
	
	<!-- The actual namespace of the imported document is
		 http://example.org/Echo -->
	<wsdl:import namespace="http://example.org/EchoInterface" location="Echo.wsdl"/>

	<wsdl:binding name="EchoSOAPBinding"
		type="http://www.w3.org/ns/wsdl/soap"
		wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/" />

	<wsdl:service name="EchoService" interface="tns:EchoInterface">
		<wsdl:documentation>The Echo service.</wsdl:documentation>
		<wsdl:endpoint name="SOAPEndpoint"
			binding="tns:EchoSOAPBinding" />
	</wsdl:service>
		
	
</wsdl:description>
